--- a/MyAvaloniaApp.csproj
+++ b/MyAvaloniaApp.csproj
@@ -11,8 +11,8 @@
     <PackageReference Include="Avalonia" Version="0.10.4" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.4" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.4" />
-    <PackageReference Include="Avalonia.Skia" Version="0.10.4" />
     <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.10.4" />
+    <PackageReference Include="Avalonia.Direct2D1" Version="0.10.4" />
     <PackageReference Include="MvvmGen" Version="1.0.0" />
    </ItemGroup>
 </Project>
