--- a/src/MyAvaloniaApp.csproj
+++ b/src/MyAvaloniaApp.csproj
@@ -8,9 +8,13 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="App.xaml" />
     <None Remove="MainWindow.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <AvaloniaXaml Include="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </AvaloniaXaml>
     <AvaloniaXaml Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
     </AvaloniaXaml>
@@ -24,6 +28,9 @@
     <PackageReference Include="MvvmGen" Version="1.0.0" />
    </ItemGroup>
   <ItemGroup>
+    <Compile Update="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+    </Compile>
     <Compile Update="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
